--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="d-block w-100" src="/images/new19.jpeg" alt="First slide" width="1600px" height="570px">
+          <img class="d-block w-100" src="images/new19.jpeg" alt="First slide" width="1600px" height="570px">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="/images/new2.jpeg" alt="Second slide" width="1600px" height="570px">
+          <img class="d-block w-100" src="images/new2.jpeg" alt="Second slide" width="1600px" height="570px">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="/images/new7.jpeg" alt="Third slide" width="1600px" height="570px">
+          <img class="d-block w-100" src="images/new7.jpeg" alt="Third slide" width="1600px" height="570px">
         </div>
         
       </div>
@@ -121,21 +121,21 @@
         <div class="col-md-4 col-12">
           <div class="card bg-dark text-white">
             <a href="category.html">
-              <img class="card-img img img-fluid" src="/images/new1.jpeg" alt="Card image">
+              <img class="card-img img img-fluid" src="images/new1.jpeg" alt="Card image">
             </a>
           </div>
         </div>
         <div class="col-md-4 col-12 mt-small-5 mb-small-5">
           <div class="card bg-dark text-white">
             <a href="category.html">
-              <img class="card-img img img-fluid" src="/images/new8.jpeg" alt="Card image">
+              <img class="card-img img img-fluid" src="images/new8.jpeg" alt="Card image">
             </a>
           </div>
         </div>
         <div class="col-md-4 col-12">
           <div class="card bg-dark text-white">
             <a href="category.html">
-              <img class="card-img img img-fluid" src="/images/new17.jpeg" alt="Card image">
+              <img class="card-img img img-fluid" src="images/new17.jpeg" alt="Card image">
             </a>
           </div>
         </div>
@@ -155,7 +155,7 @@
         <div class="col-md-4 col-12">
           <div class="single_product shadow text-center p-1">
             <div class="product_img">
-              <a href="product_detail.html"><img src="/images/new9.jpeg" class="img img-fluid" alt=""></a>
+              <a href="product_detail.html"><img src="images/new9.jpeg" class="img img-fluid" alt=""></a>
               <div class="new_product">
                 <span class="badge py-2 px-3 badge-pill badge-danger">New</span>
               </div>
@@ -178,7 +178,7 @@
         <div class="col-md-4 col-12">
           <div class="single_product shadow text-center p-1 mt-small-5 mb-small-5">
             <div class="product_img">
-              <a href="product_detail.html"><img src="/images/new11.jpeg" class="img img-fluid" alt=""></a>
+              <a href="product_detail.html"><img src="images/new11.jpeg" class="img img-fluid" alt=""></a>
               <div class="new_product">
                 <span class="badge py-2 px-3 badge-pill badge-danger">New</span>
               </div>
@@ -201,7 +201,7 @@
         <div class="col-md-4 col-12">
           <div class="single_product shadow text-center p-1">
             <div class="product_img">
-              <a href="product_detail.html"><img src="/images/new21.jpeg"  class="img img-fluid" alt=""></a>
+              <a href="product_detail.html"><img src="images/new21.jpeg"  class="img img-fluid" alt=""></a>
               <div class="new_product">
                 <span class="badge py-2 px-3 badge-pill badge-danger">New</span>
               </div>
@@ -226,7 +226,7 @@
         <div class="col-md-4 col-12">
           <div class="single_product shadow text-center p-1">
             <div class="product_img">
-              <a href="product_detail.html"><img src="/images/new21.jpeg" class="img img-fluid" alt=""></a>
+              <a href="product_detail.html"><img src="images/new21.jpeg" class="img img-fluid" alt=""></a>
               <div class="new_product">
                 <span class="badge py-2 px-3 badge-pill badge-danger">New</span>
               </div>
@@ -249,7 +249,7 @@
         <div class="col-md-4 col-12">
           <div class="single_product shadow text-center p-1 mt-small-5 mb-small-5">
             <div class="product_img">
-              <a href="product_detail.html"><img src="/images/new9.jpeg" class="img img-fluid" alt=""></a>
+              <a href="product_detail.html"><img src="images/new9.jpeg" class="img img-fluid" alt=""></a>
               <div class="new_product">
                 <span class="badge py-2 px-3 badge-pill badge-danger">New</span>
               </div>
@@ -272,7 +272,7 @@
         <div class="col-md-4 col-12">
           <div class="single_product shadow text-center p-1">
             <div class="product_img">
-              <a href="product_detail.html"><img src="/images/new11.jpeg" class="img img-fluid" alt=""></a>
+              <a href="product_detail.html"><img src="images/new11.jpeg" class="img img-fluid" alt=""></a>
               <div class="new_product">
                 <span class="badge py-2 px-3 badge-pill badge-danger">New</span>
               </div>
@@ -365,7 +365,7 @@
         <div class="row">
           <div class="col-md-3 col-6 pl-5 pl-small-15">
             <div class="footer_title">
-              <a href="index.html"><img src="/images/new23.png" width="150px" class="img img-fluid" alt="logo"></a>
+              <a href="index.html"><img src="images/new23.png" width="150px" class="img img-fluid" alt="logo"></a>
             </div>
             <div>
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit, totam est illum ipsum quas ad
