--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <nav class="navbar navbar-expand-lg navbar-light  py-3  " style="background-color: #8EC5FC;
     background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);">
         <a class="navbar-brand pl-5 pl-small-0" href="index.html">
-          <img src="/images/new23.png" class="img img-fluid" width="50px" alt="logo">
+          <img src="images/new23.png" class="img img-fluid" width="50px" alt="logo">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
