--- a/about.html
+++ b/about.html
@@ -362,7 +362,7 @@
                 </div>
             </div>
             <div class="border-top">
-                <h6 class="text-center mt-3">Copyright ©2021 Abhishek Banarase
+                <h6 class="text-center mt-3">Copyright ©2022 Jitendriya Jena
                 </h6>
             </div>
         </footer>
